[gd_scene load_steps=16 format=3 uid="uid://bcgrgxql86cti"]

[ext_resource type="Script" path="res://scene/UserInterface/PauseSettings/pause_settigs.gd" id="1_151e3"]
[ext_resource type="Theme" uid="uid://yhnx08vjtvl6" path="res://assets/Themes/main.tres" id="1_yyc10"]
[ext_resource type="Texture2D" uid="uid://dpcgdvwb3u13o" path="res://assets/Sprites/game_buttons.png" id="3_j6ysi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_np4r5"]
atlas = ExtResource("3_j6ysi")
region = Rect2(668.728, 96.7567, 46.5402, 47.3235)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_yxrho"]
atlas = ExtResource("3_j6ysi")
region = Rect2(668.756, 227.027, 46.4852, 46.9451)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_n3cys"]
atlas = ExtResource("3_j6ysi")
region = Rect2(668.756, 227.027, 46.4852, 46.9451)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_gsgqd"]
atlas = ExtResource("3_j6ysi")
region = Rect2(163.918, 96.7837, 46.3502, 47.3508)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_vf8ai"]
atlas = ExtResource("3_j6ysi")
region = Rect2(163.864, 226.973, 46.4049, 47.2161)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_fiwbl"]
atlas = ExtResource("3_j6ysi")
region = Rect2(163.864, 226.973, 46.4049, 47.2161)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_ymtkq"]
atlas = ExtResource("3_j6ysi")
region = Rect2(479.756, 31.9056, 46.3502, 47.1881)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_y36bo"]
atlas = ExtResource("3_j6ysi")
region = Rect2(479.756, 161.892, 46.3507, 46.9994)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_rd84f"]
atlas = ExtResource("3_j6ysi")
region = Rect2(479.756, 161.892, 46.3507, 46.9994)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_3rm8m"]
atlas = ExtResource("3_j6ysi")
region = Rect2(415.972, 96.9039, 47.2962, 47.0411)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_x2lkk"]
atlas = ExtResource("3_j6ysi")
region = Rect2(415.729, 226.972, 47.3507, 47.027)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_rbspb"]
atlas = ExtResource("3_j6ysi")
region = Rect2(415.729, 226.972, 47.3507, 47.027)
filter_clip = true

[node name="PauseSettigs" type="Control"]
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yyc10")
script = ExtResource("1_151e3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 96.0
texture_normal = SubResource("AtlasTexture_np4r5")
texture_pressed = SubResource("AtlasTexture_yxrho")
texture_hover = SubResource("AtlasTexture_n3cys")
stretch_mode = 5

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 104.0
offset_right = 135.0
offset_bottom = 188.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -88.0
offset_right = 396.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RetryButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_gsgqd")
texture_pressed = SubResource("AtlasTexture_vf8ai")
texture_hover = SubResource("AtlasTexture_fiwbl")
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Retry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsButton" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_ymtkq")
texture_pressed = SubResource("AtlasTexture_y36bo")
texture_hover = SubResource("AtlasTexture_rd84f")
stretch_mode = 5

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Option"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HomeButton" type="TextureButton" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_3rm8m")
texture_pressed = SubResource("AtlasTexture_x2lkk")
texture_hover = SubResource("AtlasTexture_rbspb")
stretch_mode = 5

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Home"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/HomeButton" to="." method="_on_home_button_pressed"]
